# Anker

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
assets/: Rakefile  anker.tiled-project
assets/fallback/: fallback_texture.dds
assets/maps/: anker.tiled-session  gym.tmj  sewers00.tmj
assets/maps/entities/: entities.tsj  player.tj
assets/maps/placeholders/: placeholders.tsj  player.tj
assets/maps/sewers/: sewers.tmj  sewers_background.tsj  sewers_deco.tsj  sewers_tiles.tsj
assets/shaders/: basic_2d.hlsl  basic_2d.ps.fxo  basic_2d.vs.fxo  common.h.hlsl  gizmo.hlsl  gizmo.ps.fxo  gizmo.vs.fxo  map.hlsl  map.ps.fxo  map.vs.fxo  post_process.hlsl  post_process.ps.fxo  scene_cb.h.hlsl  screen.hlsl  screen.vs.fxo  sprite.hlsl  sprite.ps.fxo  sprite.vs.fxo  sprite_renderer_cb.h.hlsl  text.hlsl  text.ps.fxo  text.vs.fxo
assets/tilesets/: sewers_background.dds  sewers_deco.dds  sewers_tiles.dds
code/: anker_main.cpp
code/anker/: anker_pch.hpp
code/anker/audio/: anker_audio_stream.cpp  anker_audio_stream.hpp  anker_audio_system.cpp  anker_audio_system.hpp  anker_audio_track.cpp  anker_audio_track.hpp
code/anker/common/: anker_assert.hpp  anker_box2d_utils.hpp  anker_check.hpp  anker_common.hpp  anker_conversion.hpp  anker_defer.hpp  anker_edit_widget_drawer.hpp  anker_entt_utils.hpp  anker_enum_utils.hpp  anker_error.hpp  anker_file_utils.cpp  anker_file_utils.hpp  anker_hash_utils.hpp  anker_image_utils.cpp  anker_image_utils.hpp  anker_imgui_utils.hpp  anker_io_utils.cpp  anker_io_utils.hpp  anker_log.cpp  anker_log.hpp  anker_macros.hpp  anker_math.cpp  anker_math.hpp  anker_memory.cpp  anker_physics_utils.hpp  anker_profiling.hpp  anker_serialize.hpp  anker_serialize_json.hpp  anker_status.hpp  anker_string_utils.hpp  anker_type_utils.hpp  anker_win32_utils.hpp
code/anker/core/: anker_actions.cpp  anker_actions.hpp  anker_asset.hpp  anker_asset_cache.cpp  anker_asset_cache.hpp  anker_component_registry.cpp  anker_component_registry.hpp  anker_components.cpp  anker_components.hpp  anker_data_loader.cpp  anker_data_loader.hpp  anker_data_loader_filesystem.cpp  anker_data_loader_filesystem.hpp  anker_engine.cpp  anker_engine.hpp  anker_entity_name.hpp  anker_imgui_system.cpp  anker_imgui_system.hpp  anker_input_system.cpp  anker_input_system.hpp  anker_inputs.hpp  anker_inputs.inc  anker_layers.hpp  anker_scene.cpp  anker_scene.hpp  anker_scene_node.cpp  anker_scene_node.hpp  anker_transform.hpp
code/anker/editor/: anker_edit_widget_drawer.cpp  anker_edit_widget_drawer.hpp  anker_editor_camera.cpp  anker_editor_camera.hpp  anker_editor_framework.cpp  anker_editor_framework.hpp  anker_editor_inspector.cpp  anker_editor_inspector.hpp  anker_editor_system.cpp  anker_editor_system.hpp  anker_inspector.cpp  anker_inspector.hpp  anker_inspector_widget_drawer.cpp  anker_inspector_widget_drawer.hpp
code/anker/game/: anker_follower.cpp  anker_follower.hpp  anker_map.cpp  anker_map.hpp  anker_parallax.cpp  anker_parallax.hpp  anker_player.hpp  anker_player_animator.cpp  anker_player_animator.hpp  anker_player_camera_follower.cpp  anker_player_camera_follower.hpp  anker_player_camera_parameters.hpp  anker_player_camera_params.hpp  anker_player_controller.cpp  anker_player_controller.hpp  anker_player_movement_parameters.hpp  anker_player_movement_params.hpp
code/anker/graphics/: anker_camera.hpp  anker_font.cpp  anker_font.hpp  anker_font_system.cpp  anker_font_system.hpp  anker_gizmo_renderer.cpp  anker_gizmo_renderer.hpp  anker_map_renderer.cpp  anker_map_renderer.hpp  anker_material.cpp  anker_material.hpp  anker_parallax.hpp  anker_post_process_params.hpp  anker_post_process_renderer.cpp  anker_post_process_renderer.hpp  anker_render_device.cpp  anker_render_device.hpp  anker_render_layers.hpp  anker_render_system.cpp  anker_render_system.hpp  anker_renderer.cpp  anker_renderer.hpp  anker_screen_renderer.cpp  anker_screen_renderer.hpp  anker_sprite.hpp  anker_sprite_renderer.cpp  anker_sprite_renderer.hpp  anker_text_renderer.cpp  anker_text_renderer.hpp  anker_tile_layer.hpp  anker_tile_layer_renderer.cpp  anker_tile_layer_renderer.hpp  anker_vertex.cpp  anker_vertex.hpp
code/anker/physics/: anker_physics_body.cpp  anker_physics_body.hpp  anker_physics_contact_listener.hpp  anker_physics_debug_draw.cpp  anker_physics_debug_draw.hpp  anker_physics_layers.hpp  anker_physics_system.cpp  anker_physics_system.hpp
code/anker/platform/: anker_file_dialogs.hpp  anker_file_dialogs_win32.cpp  anker_input_state.hpp  anker_input_system.hpp  anker_input_system_glfw.cpp  anker_input_system_glfw.hpp  anker_input_system_win32.cpp  anker_input_system_win32.hpp  anker_inputs_glfw.inc  anker_inputs_sdl.inc  anker_main_win32.cpp  anker_platform.hpp  anker_platform_glfw.cpp  anker_platform_glfw.hpp  anker_platform_sdl.cpp  anker_platform_win32.cpp  anker_platform_win32.hpp  anker_window_win32.cpp  anker_window_win32.hpp
code/anker/ui/: anker_font.hpp  anker_text_renderer.cpp  anker_text_renderer.hpp  anker_ui_system.cpp  anker_ui_system.hpp
docs/: coding_style.md  map_creation.md  platform_abstraction.md
